--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ env:
   # docker_repo:   This must be changed between forks.  This should be the
   #                dockerhub repository you will be using to register the
   #                docker containers to.
-  docker_repo: gromacs/gromacs
+  docker_repo: leandrorigheti/gromacs
 
   # Here you can specify the versions of the
   # various parameters, such as gcc or cuda.
@@ -13,7 +13,7 @@ env:
   gromacs: 2022.2
   cmake: 3.17.1
   gcc: 8
-  cuda: 11.6.0
+  cuda: 12.2.0
   openmpi: 4.0.0
   ubuntu: 20.04
   rdtscp: off
